--- a/IMG/style.css
+++ b/IMG/style.css
@@ -17,7 +17,7 @@ ul, li{
 
 #txtBusca{
     float: right;
-    margin-top: 50px;
+    margin-top: 155px;
     margin-right: 55px;
 }
 header {
@@ -27,8 +27,9 @@ header {
 .titulo{
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-    padding-top: 30px;
+    margin-left: 350px;
+  
+    display: inline-block;
 }
 .quadrado1{
     width: 45%;
@@ -49,6 +50,43 @@ header {
 }
 footer{
     background-color: darkolivegreen;
-    height: 70px;
+    height: 90px;
+    margin-top: 20px;
+    color: white;
+}
+
+.rodape{
     margin-top: 20px;
 }
+
+ i {
+    margin-top: 70px;
+margin-left: 90px;
+}
+.container {
+    display: inline-block;
+    cursor: pointer;
+    margin-top: 50px;
+    width: 20px;
+    margin-left: 40px;
+   
+  }
+  
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: rgb(255, 255, 255);
+    margin: 6px 0;
+    transition: 0.4s;
+ 
+  }
+  
+  .change .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+  }
+  
+  .change .bar2 {opacity: 0;}
+  
+  .change .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
+  }
