--- a/IMG/style.css
+++ b/IMG/style.css
@@ -57,13 +57,14 @@ footer{
 
 .rodape{
     margin-top: 20px;
-    margin-left: 200px;
+   
     height: 20px;
     width: 300px;
 }
 #icones{
     margin-left: 400px;
     width: 75px;
+    height: 30px;
 }
 
  i {
