--- a/IMG/style.css
+++ b/IMG/style.css
@@ -28,7 +28,7 @@ header {
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-left: 535px;
-  
+  font-size: 55px;
     display: inline-block;
 }
 .quadrado1{
